# deep-learner

./: README.md  core.html  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
deep_learner/: _modidx.py  core.py  training.py
nbs/: book3.ipynb  index.ipynb  nbdev.yml
